--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -27,7 +27,7 @@
 		@media only screen and (max-width: 768px) {
 			align-items: center;
 			flex-direction: column;
-			margin: 4vw 0;
+			margin: 4vw 0 0;
 			width: 100%;
 		}
 
